--- a/index.html
+++ b/index.html
@@ -1,85 +1,65 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Display</title>
+  <title>Meet Display</title>
   <style>
-    body {
-      background-color: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 10px;
-      margin: 0;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-    .section h2 {
-      margin-bottom: 10px;
-      font-size: 18px;
-    }
-    .event {
-      margin: 4px 0;
-      font-size: 14px;
-    }
+    body { background: black; color: white; font-family: Arial, sans-serif; text-align: center; }
+    .section { margin: 20px; }
+    h2 { font-size: 24px; margin-bottom: 10px; }
+    .event { margin-bottom: 5px; }
   </style>
 </head>
 <body>
-  <div class="section" id="seating">
-    <h2>NOW SEATING</h2>
-  </div>
-  <div class="section" id="secondCall">
-    <h2>SECOND CALL</h2>
-  </div>
-  <div class="section" id="firstCall">
-    <h2>FIRST CALL</h2>
-  </div>
+
+  <div class="section" id="rawData">Loading data...</div>
+
+  <div class="section" id="seating"><h2>Now Seating</h2></div>
+  <div class="section" id="secondCall"><h2>Second Call</h2></div>
+  <div class="section" id="firstCall"><h2>First Call</h2></div>
 
 <script>
-const apiKey = "V2-aq0EX-uprat-5MbZb-SzVPB-HEq27-DOUGk-fXv7C-p0bXa";
-const appId = "2e2fb385-9b7b-4d4c-aa35-a941a6d5039a";
-const tableName = "Meet Info";
-
 async function fetchData() {
   try {
-    const response = await fetch(`https://api.appsheet.com/api/v2/apps/${appId}/tables/${encodeURIComponent(tableName)}/Action`, {
-      method: 'POST',
+    const response = await fetch('https://api.appsheet.com/api/v2/apps/2e2fb385-9b7b-4d4c-aa35-a941a6d5039a/tables/Meet%20Info/records', {
+      method: 'GET',
       headers: {
-        'ApplicationAccessKey': apiKey,
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ Action: "Find", Properties: {}, Rows: [] })
+        'ApplicationAccessKey': 'V2-aq0EX-uprat-5MbZb-SzVPB-HEq27-DOUGk-fXv7C-p0bXa',
+      }
     });
 
-    const result = await response.json();
-    console.log("RAW DATA:", result);
-    updateDisplay(result.Rows);
+    const data = await response.json();
+
+    // Show raw data so we can see field names
+    document.getElementById('rawData').innerText = JSON.stringify(data, null, 2);
+
+    if (data.records) {
+      updateDisplay(data.records);
+    }
   } catch (error) {
-    console.error("Error fetching data:", error);
+    document.getElementById('rawData').innerText = "Error loading data: " + error;
   }
 }
 
-function updateDisplay(data) {
-  const seating = data.filter(item => item['Clerk Status'] === 'Seating' && item['Division'] !== 'B');
-  const secondCall = data.filter(item => item['Clerk Status'] === 'Second Call' && item['Division'] !== 'B');
-  const firstCall = data.filter(item => item['Clerk Status'] === 'First Call' && item['Division'] !== 'B');
+function updateDisplay(records) {
+  const seating = records.filter(item => item['Clerk Status'] === 'Seating');
+  const secondCall = records.filter(item => item['Clerk Status'] === 'Second Call');
+  const firstCall = records.filter(item => item['Clerk Status'] === 'First Call');
 
-  function formatItem(item) {
-    return `<div class="event">EVT ${item['Evt #']} ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']} DIV ${item['Division']}</div>`;
-  }
+  document.getElementById('seating').innerHTML += seating.map(item => formatEvent(item)).join('<br>');
+  document.getElementById('secondCall').innerHTML += secondCall.map(item => formatEvent(item)).join('<br>');
+  document.getElementById('firstCall').innerHTML += firstCall.map(item => formatEvent(item)).join('<br>');
+}
 
-  document.getElementById('seating').innerHTML += seating.map(formatItem).join('') || "<div class='event'>No Events</div>";
-  document.getElementById('secondCall').innerHTML += secondCall.map(formatItem).join('') || "<div class='event'>No Events</div>";
-  document.getElementById('firstCall').innerHTML += firstCall.map(formatItem).join('') || "<div class='event'>No Events</div>";
+function formatEvent(item) {
+  return `
+    EVT #${item['Evt #']} 
+    ${item['Gender']} ${item['Age Group']} 
+    ${item['Distance']}y ${item['Stroke']} (${item['Division']})
+  `;
 }
 
 fetchData();
-setInterval(fetchData, 10000); // Refresh every 10 seconds
 </script>
 
 </body>
