--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,74 +7,61 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: black;
-            color: white;
             margin: 0;
             padding: 0;
+            background-color: black;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
         }
-        .status {
-            width: 100%;
-            text-align: center;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .seating {
-            background-color: green;
-        }
-        .second-call {
-            background-color: yellow;
-            color: black;
-        }
-        .first-call {
-            background-color: blue;
-        }
-        .event {
-            font-size: 18px;
+        #seating, #secondCall, #firstCall {
             margin: 10px 0;
+            padding: 10px;
+            text-align: center;
+            width: 100%;
+            border-radius: 5px;
         }
+        #seating { background-color: green; }
+        #secondCall { background-color: yellow; }
+        #firstCall { background-color: blue; }
     </style>
 </head>
 <body>
-    <div id="seating" class="status seating">
-        <h2>Now Seating</h2>
-        <div id="seating-events"></div>
-    </div>
-    <div id="secondCall" class="status second-call">
-        <h2>Second Call</h2>
-        <div id="second-call-events"></div>
-    </div>
-    <div id="firstCall" class="status first-call">
-        <h2>First Call</h2>
-        <div id="first-call-events"></div>
-    </div>
+    <div id="seating">Now Seating</div>
+    <div id="secondCall">Second Call</div>
+    <div id="firstCall">First Call</div>
 
     <script>
-        // Replace the URL with the actual API endpoint to fetch your event data
-        const apiUrl = 'https://api.appsheet.com/api/v2/apps/2e2fb385-9b7b-4d4c-aa35-a941a6d5039a/tables/Meet%20Info/rows';
+        // Fetch the data from your API
+        const apiUrl = 'https://api.appsheet.com/api/v2/apps/2e2fb385-9b7b-4d4c-aa35-a941a6d5039a/tables/Meet%20Info/Action'; // Use the correct API URL here
+        const apiKey = 'V2-aq0EX-uprat-5MbZb-SzVPB-HEq27-DOUGk-fXv7C-p0bXa'; // Use the correct API key
 
-        // Fetch the data
         fetch(apiUrl, {
             method: 'GET',
             headers: {
-                'ApplicationAccessKey': 'V2-aq0EX-uprat-5MbZb-SzVPB-HEq27-DOUGk-fXv7C-p0bXa'
+                'ApplicationAccessKey': apiKey,
+                'Content-Type': 'application/json'
             }
         })
         .then(response => response.json())
         .then(data => {
             updateDisplay(data);
         })
-        .catch(error => {
-            console.error('Error fetching data:', error);
-        });
+        .catch(error => console.error('Error fetching data:', error));
 
+        // Function to update display
         function updateDisplay(data) {
             const seating = data.filter(item => item['Clerk Status'] === 'Seating');
             const secondCall = data.filter(item => item['Clerk Status'] === 'Second Call');
             const firstCall = data.filter(item => item['Clerk Status'] === 'First Call');
 
-            document.getElementById('seating-events').innerHTML = seating.map(item => `<div class="event">${item['Evt #']} - ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']}</div>`).join('');
-            document.getElementById('second-call-events').innerHTML = secondCall.map(item => `<div class="event">${item['Evt #']} - ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']}</div>`).join('');
-            document.getElementById('first-call-events').innerHTML = firstCall.map(item => `<div class="event">${item['Evt #']} - ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']}</div>`).join('');
+            document.getElementById('seating').innerHTML = seating.map(item => `${item['Evt #']} - ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']}`).join('<br>');
+            document.getElementById('secondCall').innerHTML = secondCall.map(item => `${item['Evt #']} - ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']}`).join('<br>');
+            document.getElementById('firstCall').innerHTML = firstCall.map(item => `${item['Evt #']} - ${item['Gender']} ${item['Age Group']} ${item['Distance']} ${item['Stroke']}`).join('<br>');
         }
     </script>
 </body>
