--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </style>
 </head>
 <body>
-    <div id="seating">Now Seating</div>
-    <div id="secondCall">Second Call</div>
-    <div id="firstCall">First Call</div>
+    <div id="Seating">Now Seating</div>
+    <div id="Second Call">Second Call</div>
+    <div id="First Call">First Call</div>
 
     <script>
         // Fetch the data from your API
